--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -33,6 +33,12 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="login_text_input_edit_text" parent="NormalTextFragment">
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
     <style name="TitleFragment">
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
