--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivLoginIberdrola" >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tietLoginUsuario"
             style="@style/login_text_input_edit_text"
             android:hint="@string/etLoginUsuarioHint"
             android:inputType="textEmailAddress"/>
@@ -58,6 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tilLoginUsuario">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tietLoginContraseña"
             style="@style/login_text_input_edit_text"
             android:hint="@string/etLoginContraseñaHint"
             android:inputType="textPassword"/>
