01/06/2023 - SmartSolarDetallesFragment cambiar color icono tilEstadoAutoconsumidor

--- a/app/src/main/res/layout/fragment_smart_solar_detalles.xml
+++ b/app/src/main/res/layout/fragment_smart_solar_detalles.xml
@@ -44,6 +44,7 @@
         app:endIconCheckable="true"
         app:endIconDrawable="@drawable/selector_tooltip_azul_estado"
         app:endIconMode="custom"
+        app:endIconTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/glLimiteDerecho"
         app:layout_constraintStart_toStartOf="@+id/glLimiteIzquierdo"
         app:layout_constraintTop_toBottomOf="@+id/tilCAU">
