--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,6 +6,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:elevation">0dp</item>
         <item name="android:textAllCaps">false</item>
+        <item name="backgroundTint">@null</item>
     </style>
 
     <style name="botones_secundarios" parent="NormalTextFragment">
@@ -14,6 +15,7 @@
         <item name="android:textColor">@color/green_500</item>
         <item name="android:elevation">0dp</item>
         <item name="android:textAllCaps">false</item>
+        <item name="backgroundTint">@null</item>
     </style>
 
     <style name="boton_login_registrate">
@@ -22,6 +24,7 @@
         <item name="android:background">@drawable/selector_boton_primario_blanco</item>
         <item name="android:textColor">@color/green_500</item>
         <item name="android:elevation">0dp</item>
+        <item name="backgroundTint">@null</item>
     </style>
 
     <style name="detalles_smart_solar_text_input_edit_text" parent="NormalTextFragment">
