02/06/2023 - Cambiar color texto boton primario blanco

--- a/app/src/main/res/drawable/selector_boton_primario_blanco.xml
+++ b/app/src/main/res/drawable/selector_boton_primario_blanco.xml
@@ -3,7 +3,8 @@
 
     <item android:state_enabled="false">
         <shape>
-            <solid android:color="@color/grey"/>
+            <stroke android:width="2dp" android:color="@color/grey"/>
+            <solid android:color="@android:color/transparent"/>
             <corners android:radius="24dp" />
         </shape>
     </item>
