--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -18,12 +18,12 @@
         <item name="backgroundTint">@null</item>
     </style>
 
-    <style name="boton_login_registrate">
+    <style name="boton_login_registrate" parent="NormalTextFragment">
         <item name="android:textAllCaps">false</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:background">@drawable/selector_boton_primario_blanco</item>
-        <item name="android:textColor">@color/green_500</item>
         <item name="android:elevation">0dp</item>
+        <item name="android:textColor">@drawable/selector_text_color_boton_primario_blanco</item>
         <item name="backgroundTint">@null</item>
     </style>
 
